add JGiven BDD scenarios for Group/Ungroup and document lecture 9 + lab 9
Add JGiven 1.3.1, AssertJ 3.25.3, and AssertJ-Swing-JUnit 3.17.1 test
dependencies. Surefire argLine opens java.base/java.lang so JGiven's
ByteBuddy proxy generator runs on JDK 25. Four BDD scenarios in
GroupUngroupScenarioTest map user stories US-1 to US-3 onto
Given-When-Then sentences via the GivenADrawing / WhenTheUser /
ThenTheDrawing stage classes; a fifth AssertJ-Swing scenario is kept
@Ignore'd as documentation of the GUI-level equivalent. Append the
Lecture 9 and Lab 9 sections to the portfolio.